Fri Jan  4 03:15:28 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: refactoring:
	  unify gvar/lvar initializer resolver.

	* net/loveruby/cflat/compiler/TypeChecker.java: check gvar
	  initializer.

	* net/loveruby/cflat/compiler/LocalReferenceResolver.java: resolve
	  gvar initializer.

	* net/loveruby/cflat/ast/AST.java: new method #variables.

	* test/initializer.cb: test variable initializer.

	* test/stdio.hb: return type of printf/puts/putc is int.

	* test/usertype.cb: ditto.

	* test/funcptr.cb: ditto.

Fri Jan  4 02:47:18 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Visitor.java: did not visit lvar
	  initializer.

	* net/loveruby/cflat/compiler/TypeChecker.java: check lvar
	  initializer.

	* net/loveruby/cflat/ast/DefinedVariable.java: new method
	  #setInitializer.

	* net/loveruby/cflat/type/PointerType.java (isSameType): all array
	  is same type (allocated arrays are rejected by LHS check).

	* test/block.cb: was wrong test.

	* test/assign.cb: add tests.

	* test/test.sh: adjust output for assign.cb.

Fri Jan  4 01:45:30 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java (PtrMemberNode):
	  allow array for base expr.

	* net/loveruby/cflat/compiler/CodeGenerator.java (AssignNode):
	  should not leave RHS value on stack (because of feature change).

	* net/loveruby/cflat/compiler/CodeGenerator.java (VariableNode):
	  load address for array, to support ptr = ary.

	* net/loveruby/cflat/compiler/CodeGenerator.java (ArefNode):
	  dereference pointer, to support ptr[0].

	* net/loveruby/cflat/compiler/CodeGenerator.java
	  (compileLHS/ArefNode): ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java
	  (compileLHS/ArefNode): support non-LHS expr.

	* net/loveruby/cflat/compiler/CodeGenerator.java
	  (compileLHS/ArefNode): support non-constant index.

	* net/loveruby/cflat/compiler/CodeGenerator.java