@@ -1,0 +1,1 @@
+int main(int argc, char **argv) { void[1] ary; return 0; }
